1.2.0:
- Updated to 1.15.1