@@ -4,10 +4,10 @@ curse_type=beta
 projectId=344424
 github_project=TheMCBrothers/Interior-Mod
 
-mcp_mappings=20191230-1.14.3
+mcp_mappings=20200104-1.14.3
 minecraft_version=1.15.1
-forge_version=30.0.18
-#jei_version=1.14.4:6.0.0.18
+forge_version=30.0.22
+jei_version=1.15.1:6.0.0-381a0d7.9999
 #hwyla_version=1.10.6-B67_1.14.4
 
 #doDeobfJar=false
