@@ -1,2 +1,3 @@
 1.2.0:
 - Updated to 1.15.1
+- Added custom shape to table
